@@ -76,6 +76,7 @@ Ver.6-dev (in development)
 - [BUG FIX] Cache mode did't work. This bug is added after branching 6(master) and 5.x.
 - [BUG FIX] Calculation from other contexts didn't work, and fix it.
 - [BUG FIX] The class name 'Null' wasn't permitted in PHP7. It was changed to NullDB.
+- [BUG FIX] Local context values didn't involve in any calculations.
 - [INFO] The src/lib/js_lib directory is removed.
 
 Ver.5.11 (November 17, 2019)
